--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.29.0
-torch==2.1.0
-torchvision==0.16.0
-numpy==1.24.3
-matplotlib==3.7.2
-Pillow==10.0.1
-tqdm==4.66.1
+streamlit>=1.32.0
+torch>=2.5.0
+torchvision>=0.20.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+Pillow>=10.0.0
+tqdm>=4.65.0
